test/semantic_errors/invalid_abbreviation3.mc
void main() {
    bool i;
    ++i; /* pre-increment a bool */
}